rm RAM Limit, add Icon

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dokumentensuche</title>
+  <title>📖 Dokumentensuche</title>
   <script src="https://cdn.jsdelivr.net/npm/meilisearch@0.37.0/dist/bundles/meilisearch.umd.min.js"></script>
   <style>
     * {
