--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>📖 Dokumentensuche</title>
   <script src="https://cdn.jsdelivr.net/npm/meilisearch@0.37.0/dist/bundles/meilisearch.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <style>
     * {
       box-sizing: border-box;
@@ -140,10 +141,270 @@
       padding: 40px;
     }
 
-    .loading {
-      text-align: center;
-      color: #888;
+    /* Modal Styles */
+    .modal-overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.8);
+      z-index: 1000;
+      overflow-y: auto;
       padding: 20px;
+    }
+
+    .modal-overlay.active {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    .modal {
+      background: #252525;
+      border: 1px solid #444;
+      border-radius: 12px;
+      max-width: 800px;
+      width: 100%;
+      margin: 40px 0;
+      overflow: hidden;
+    }
+
+    .modal-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 16px 20px;
+      border-bottom: 1px solid #333;
+      gap: 12px;
+    }
+
+    .modal-header-left {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      flex: 1;
+      min-width: 0;
+    }
+
+    .modal-title {
+      font-size: 18px;
+      font-weight: 600;
+      color: #fff;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .modal-close {
+      background: none;
+      border: none;
+      color: #888;
+      font-size: 28px;
+      cursor: pointer;
+      padding: 0 8px;
+      line-height: 1;
+    }
+
+    .modal-close:hover {
+      color: #fff;
+    }
+
+    .modal-body {
+      padding: 20px;
+    }
+
+    .modal-section {
+      margin-bottom: 20px;
+    }
+
+    .modal-section:last-child {
+      margin-bottom: 0;
+    }
+
+    .modal-section-title {
+      font-size: 12px;
+      color: #888;
+      text-transform: uppercase;
+      margin-bottom: 8px;
+      font-weight: 500;
+    }
+
+    .modal-path {
+      font-family: monospace;
+      font-size: 13px;
+      color: #8ac4ff;
+      background: #1a1a1a;
+      padding: 10px 12px;
+      border-radius: 6px;
+      word-break: break-all;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+    }
+
+    .modal-path-text {
+      flex: 1;
+      min-width: 0;
+    }
+
+    .copy-btn {
+      background: #3a3a3a;
+      border: none;
+      color: #aaa;
+      padding: 6px 12px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 12px;
+      white-space: nowrap;
+    }
+
+    .copy-btn:hover {
+      background: #4a4a4a;
+      color: #fff;
+    }
+
+    .copy-btn.copied {
+      background: #2a4a3a;
+      color: #8affb4;
+    }
+
+    .modal-content {
+      font-size: 14px;
+      line-height: 1.6;
+      color: #ccc;
+      background: #1a1a1a;
+      padding: 16px;
+      border-radius: 6px;
+      max-height: 400px;
+      overflow-y: auto;
+      white-space: pre-wrap;
+      word-break: break-word;
+    }
+
+    .modal-content em {
+      background: rgba(74, 158, 255, 0.3);
+      color: #8ac4ff;
+      font-style: normal;
+      padding: 0 2px;
+      border-radius: 2px;
+    }
+
+    .modal-meta {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 12px;
+    }
+
+    .meta-item {
+      background: #1a1a1a;
+      padding: 10px 12px;
+      border-radius: 6px;
+    }
+
+    .meta-label {
+      font-size: 11px;
+      color: #666;
+      margin-bottom: 4px;
+    }
+
+    .meta-value {
+      font-size: 13px;
+      color: #ccc;
+      word-break: break-word;
+    }
+
+    /* Markdown Styles */
+    .markdown-body {
+      white-space: normal;
+    }
+
+    .markdown-body h1, .markdown-body h2, .markdown-body h3,
+    .markdown-body h4, .markdown-body h5, .markdown-body h6 {
+      color: #fff;
+      margin: 16px 0 8px 0;
+      font-weight: 600;
+    }
+
+    .markdown-body h1 { font-size: 1.6em; border-bottom: 1px solid #333; padding-bottom: 8px; }
+    .markdown-body h2 { font-size: 1.4em; border-bottom: 1px solid #333; padding-bottom: 6px; }
+    .markdown-body h3 { font-size: 1.2em; }
+    .markdown-body h4 { font-size: 1.1em; }
+
+    .markdown-body p { margin: 8px 0; }
+
+    .markdown-body ul, .markdown-body ol {
+      margin: 8px 0;
+      padding-left: 24px;
+    }
+
+    .markdown-body li { margin: 4px 0; }
+
+    .markdown-body code {
+      background: #333;
+      padding: 2px 6px;
+      border-radius: 4px;
+      font-family: monospace;
+      font-size: 0.9em;
+    }
+
+    .markdown-body pre {
+      background: #333;
+      padding: 12px;
+      border-radius: 6px;
+      overflow-x: auto;
+      margin: 12px 0;
+    }
+
+    .markdown-body pre code {
+      background: none;
+      padding: 0;
+    }
+
+    .markdown-body blockquote {
+      border-left: 3px solid #4a9eff;
+      margin: 12px 0;
+      padding-left: 12px;
+      color: #aaa;
+    }
+
+    .markdown-body a {
+      color: #4a9eff;
+      text-decoration: none;
+    }
+
+    .markdown-body a:hover {
+      text-decoration: underline;
+    }
+
+    .markdown-body table {
+      border-collapse: collapse;
+      margin: 12px 0;
+      width: 100%;
+    }
+
+    .markdown-body th, .markdown-body td {
+      border: 1px solid #444;
+      padding: 8px;
+      text-align: left;
+    }
+
+    .markdown-body th {
+      background: #333;
+      font-weight: 600;
+    }
+
+    .markdown-body hr {
+      border: none;
+      border-top: 1px solid #444;
+      margin: 16px 0;
+    }
+
+    .markdown-body img {
+      max-width: 100%;
+      border-radius: 6px;
     }
   </style>
 </head>
@@ -160,6 +421,20 @@
     </div>
     <div class="stats" id="stats"></div>
     <div class="results" id="results"></div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal-overlay" id="modalOverlay">
+    <div class="modal" id="modal">
+      <div class="modal-header">
+        <div class="modal-header-left">
+          <span class="result-type" id="modalType"></span>
+          <span class="modal-title" id="modalTitle"></span>
+        </div>
+        <button class="modal-close" id="modalClose">&times;</button>
+      </div>
+      <div class="modal-body" id="modalBody"></div>
+    </div>
   </div>
 
   <script>
@@ -191,7 +466,14 @@
     const searchInput = document.getElementById('searchInput');
     const resultsContainer = document.getElementById('results');
     const statsContainer = document.getElementById('stats');
+    const modalOverlay = document.getElementById('modalOverlay');
+    const modal = document.getElementById('modal');
+    const modalBody = document.getElementById('modalBody');
+    const modalTitle = document.getElementById('modalTitle');
+    const modalType = document.getElementById('modalType');
+    const modalClose = document.getElementById('modalClose');
 
+    let currentHits = [];
     let debounceTimer;
 
     searchInput.addEventListener('input', () => {
@@ -199,12 +481,102 @@
       debounceTimer = setTimeout(performSearch, 150);
     });
 
+    // Modal schließen
+    modalClose.addEventListener('click', closeModal);
+    modalOverlay.addEventListener('click', (e) => {
+      if (e.target === modalOverlay) closeModal();
+    });
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closeModal();
+    });
+
+    function closeModal() {
+      modalOverlay.classList.remove('active');
+    }
+
+    function openModal(hitIndex) {
+      const hit = currentHits[hitIndex];
+      if (!hit) return;
+
+      const type = hit.type || 'file';
+      modalType.textContent = type;
+      modalType.className = 'result-type ' + escapeHtml(type);
+      modalTitle.textContent = hit.filename || 'Unbekannt';
+
+      // Build modal body
+      let bodyHtml = '';
+
+      // Pfad
+      bodyHtml += `
+        <div class="modal-section">
+          <div class="modal-section-title">Pfad</div>
+          <div class="modal-path">
+            <span class="modal-path-text">${escapeHtml(hit.path)}</span>
+            <button class="copy-btn" onclick="copyToClipboard('${escapeHtml(hit.path)}', this)">Kopieren</button>
+          </div>
+        </div>
+      `;
+
+      // Content/Preview
+      const content = hit._formatted?.content || hit.content || hit._formatted?.preview || hit.preview || '';
+      if (content) {
+        const isMarkdown = type === 'markdown' || type === 'md';
+        const renderedContent = isMarkdown ? marked.parse(content) : sanitizeHighlight(content);
+
+        bodyHtml += `
+          <div class="modal-section">
+            <div class="modal-section-title">Inhalt</div>
+            <div class="modal-content ${isMarkdown ? 'markdown-body' : ''}">${renderedContent}</div>
+          </div>
+        `;
+      }
+
+      // Audio-Metadaten
+      if (type === 'audio') {
+        const audioFields = ['Title', 'Artist', 'Album', 'Genre', 'Year', 'Duration', 'Bitrate', 'SampleRate'];
+        const metaItems = audioFields
+          .filter(field => hit[field])
+          .map(field => `
+            <div class="meta-item">
+              <div class="meta-label">${field}</div>
+              <div class="meta-value">${escapeHtml(String(hit[field]))}</div>
+            </div>
+          `).join('');
+
+        if (metaItems) {
+          bodyHtml += `
+            <div class="modal-section">
+              <div class="modal-section-title">Metadaten</div>
+              <div class="modal-meta">${metaItems}</div>
+            </div>
+          `;
+        }
+      }
+
+      modalBody.innerHTML = bodyHtml;
+      modalOverlay.classList.add('active');
+    }
+
+    function copyToClipboard(text, btn) {
+      navigator.clipboard.writeText(text).then(() => {
+        btn.textContent = 'Kopiert!';
+        btn.classList.add('copied');
+        setTimeout(() => {
+          btn.textContent = 'Kopieren';
+          btn.classList.remove('copied');
+        }, 2000);
+      }).catch(err => {
+        console.error('Kopieren fehlgeschlagen:', err);
+      });
+    }
+
     async function performSearch() {
       const query = searchInput.value.trim();
 
       if (!query) {
         resultsContainer.innerHTML = '';
         statsContainer.textContent = '';
+        currentHits = [];
         return;
       }
 
@@ -218,6 +590,7 @@
           highlightPostTag: '</em>'
         });
 
+        currentHits = results.hits;
         renderResults(results);
       } catch (error) {
         console.error('Suchfehler:', error);
@@ -237,13 +610,13 @@
         return;
       }
 
-      resultsContainer.innerHTML = hits.map(hit => {
+      resultsContainer.innerHTML = hits.map((hit, index) => {
         const preview = hit._formatted?.preview || hit.preview || '';
         const type = hit.type || 'file';
         const path = formatPath(hit.path);
 
         return `
-          <div class="result-card" onclick="copyPath('${escapeHtml(hit.path)}')">
+          <div class="result-card" onclick="openModal(${index})">
             <div class="result-header">
               <span class="result-type ${escapeHtml(type)}">${escapeHtml(type)}</span>
               <span class="result-title">${escapeHtml(hit.filename)}</span>
@@ -257,7 +630,6 @@
 
     function formatPath(path) {
       if (!path) return '';
-      // Kürze den Pfad für bessere Lesbarkeit
       return path
         .replace('/data/md_files/', '')
         .replace('/data/audio_files/', '');
@@ -272,19 +644,10 @@
 
     function sanitizeHighlight(html) {
       if (!html) return '';
-      // Escape alles, dann nur <em> Tags wiederherstellen
       const escaped = escapeHtml(html);
       return escaped
         .replace(/&lt;em&gt;/g, '<em>')
         .replace(/&lt;\/em&gt;/g, '</em>');
-    }
-
-    function copyPath(path) {
-      navigator.clipboard.writeText(path).then(() => {
-        // Optional: Feedback anzeigen
-      }).catch(err => {
-        console.error('Kopieren fehlgeschlagen:', err);
-      });
     }
   </script>
 </body>
